--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <section id="particles-js">
       <div class="text">
         <h2>
-          Ramadan Mubarak <br /><span
+          Ramadan Mubarak<br /><span
             >To Sheymah & All Of Your Wonderful Family!</span
           >
         </h2>
       </div>
       <div class="mosque"></div>
+      <audio src="assets/ramadan.mp3" loop="true" autoplay>
     </section>
     <script src="particles.js"></script>
     <script src="particlesApp.js"></script>
