--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <section id="particles-js">
+          <wrapper class="wrapper">
+
       <div class="text">
         <h2>
           Ramadan Mubarak<br /><span
@@ -16,6 +18,8 @@
         </h2>
       </div>
       <div class="mosque"></div>
+    </wrapper>
+
       <audio src="assets/ramadan.mp3" loop="true" autoplay>
     </section>
     <script src="particles.js"></script>
